ED 5 - API to get all products paginated